syntax="proto3";

import "commonpb.proto";

package auth;
// Should we name it auth or authpb?


service AuthService {
    rpc Login(LoginRequest) returns (Credentials);
    rpc Register(RegisterRequest) returns (Credentials);
    rpc Refresh(RefreshTokenRequest) returns (Credentials);
    // Send reset token to email
    rpc SendOtp(SendOtpRequest) returns (common.SuccessResponse);
    rpc ResetPasswordWithOtp(ResetPasswordWithOtpRequest) returns (common.SuccessResponse);
}

message LoginRequest {
    // Email or username
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string name = 5;
    string lastName = 6;
    int32 districtId = 7;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message SendOtpRequest {
    // Email or username
    string username = 1;
}

message ResetPasswordWithOtpRequest {
    string otp = 1;
    string password = 2;
    string passwordValidate = 3;
}

message Credentials {
    string token = 1;
    string refreshToken = 2;
}


