syntax="proto3";

import "commonpb.proto";

package user;

service UserService {
    rpc GetMe(common.Empty) returns (UserResponse);
    rpc GetUser(common.GetByIdRequest) returns (UserResponse);
    rpc SearchUsers(UserSearchRequest) returns (UserListResponse);
    rpc UpdateUser(UserUpdateRequest) returns (UserResponse);
    rpc UploadAvatar(UpdateAvatarRequest) returns (UserResponse); // Remove when file service is ready
    rpc ToggleFollow(common.GetByIdRequest) returns (FollowResponse);
    rpc ToggleBlock(common.GetByIdRequest) returns (BlockResponse);
    rpc GetFollowers(common.GetByIdRequest) returns (UserListResponse);
    rpc GetFollowing(common.GetByIdRequest) returns (UserListResponse);
    rpc GetBlocked(common.GetByIdRequest) returns (UserListResponse);
    // Report User
    rpc AddComment(common.CommentRequest) returns (common.CommentResponse);
    // Hide Comment
}

message UserSearchRequest{
    common.Query query=1;
    common.PaginationRequest pagination=2;
}

// Be able to update only own user
message UserUpdateRequest {
    reserved 1, 2, 3;
    optional string name = 4;
    optional string lastname = 5;
    optional int32 districtID = 6;
}

message UpdateAvatarRequest {
    int32 avatarFileId = 1;
}

message User{
    int32 id=1;
    string email=2;
    string username=3;
    string name = 4;
    string lastname = 5;
    string avatarPath = 6;
    optional string password = 7;
    int32 districtID = 8;
}

message UserResponse{
    User user=1;
}

message UserListResponse{
    repeated User user=1;
    common.PaginationResponse pagination=2;
}

message FollowResponse{
    reserved 1;
    bool isFollowing=2;
    int32 subjectUserID=3;
}

message BlockResponse{
    reserved 1;
    bool isBlocked=2;
    int32 subjectUserID=3;
}


